[workspace]
members = ["./", "tools/self-play"]

[package]
name = "fold-chess"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chess = { git = "https://github.com/jordanbray/chess", rev = "f6fae8bddcc941925e16e2770a6e95c1498e7e6f" }
failure = "0.1.8"
rand = "0.9.1"
uci-parser = "1.1.0"
