[workspace]
members = ["./", "tools/self-play"]

[package]
name = "patch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chess = { git = "https://github.com/jordanbray/chess", rev = "f6fae8bddcc941925e16e2770a6e95c1498e7e6f" }
parking_lot = "0.12.3"
rayon = "1.10.0"
uci-parser = "1.1.0"
